--- a/public/assets/landing/css/landing-page.css
+++ b/public/assets/landing/css/landing-page.css
@@ -31,7 +31,7 @@ h6 {
 }
 
 .intro-header {
-    padding-top: 0; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 0;
     text-align: center;
     color: #d1e5d6;
@@ -118,8 +118,18 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    /*background: url(../img/) no-repeat center center;*/
     background-size: cover;
+}
+
+.callendar {
+    padding: 10px 0;
+    /*color: #f8f8f8;*/
+    /*!*background: url(../img/) no-repeat center center;*!*/
+    /*background-size: cover;*/
+    position: relative;
+    /*padding-top: 20%;*/
+    /*padding-bottom: 20%;*/
 }
 
 
