--- a/public/assets/landing/css/landing-page.css
+++ b/public/assets/landing/css/landing-page.css
@@ -32,7 +32,9 @@ h6 {
 
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 0;
+    /*padding-bottom: ;*/
+    position:relative;
+    height: 1000px;
     text-align: center;
     color: #d1e5d6;
     background: url(../img/intro-bg.jpg) no-repeat center center;
@@ -123,7 +125,7 @@ h6 {
 }
 
 .callendar {
-    padding: 10px 0;
+    padding: 100px 0;
     /*color: #f8f8f8;*/
     /*!*background: url(../img/) no-repeat center center;*!*/
     /*background-size: cover;*/
